add async train NN, add buttons for testing NN and repair form for view neuronProperties